--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-nunjucks": "^2.2.5",
+    "glob-parent": "5.1.2",
     "govuk-frontend": "^3.11.0",
     "helmet": "^3.21.2",
     "http-proxy-middleware": "^1.0.6",
