--- a/package.json
+++ b/package.json
@@ -119,6 +119,9 @@
     "node-sass/meow/trim-newlines": "^4.0.1",
     "mini-css-extract-plugin/normalize-url": "^6.0.1",
     "html-webpack-plugin/pretty-error": "^3.0.4",
-    "uglifyjs-webpack-plugin/serialize-javascript": "^3.1.0"
+    "uglifyjs-webpack-plugin/serialize-javascript": "^3.1.0",
+    "copy-webpack-plugin/glob-parent": "^5.1.2",
+    "node-sass/node-gyp/tar": "^4.4.18",
+    "webpack/watchpack/watchpack-chokidar2/chokidar/glob-parent": "^5.1.2"
   }
 }
