--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
     "sass-lint/eslint/shelljs": ">=0.8.5",
     "sass-lint/merge": ">=2.1.1",
     "uglifyjs-webpack-plugin/serialize-javascript": ">=3.1.0",
-    "puppeteer/node-fetch": ">=2.6.7"
+    "puppeteer/node-fetch": ">=2.6.7",
+    "tsconfig-paths/minimist": ">=1.2.6 ",
+    "config/json5/minimist" : ">=1.2.6 "
   }
 }
