--- a/package.json
+++ b/package.json
@@ -128,6 +128,9 @@
     "webpack/terser-webpack-plugin/terser": ">=5.14.2",
     "@hmcts/nodejs-healthcheck/@hmcts/nodejs-logging/moment" : ">=2.29.4",
     "@hmcts/nodejs-logging/moment" : ">=2.29.4",
-    "@hmcts/nodejs-healthcheck/superagent/formidable/qs" : ">=6.9.7"
+    "@hmcts/nodejs-healthcheck/superagent/formidable/qs" : ">=6.9.7",
+    "@hmcts/nodejs-healthcheck/superagent/cookiejar" : ">=2.1.4",
+    "json5": ">=2.2.2",
+    "tsconfig-paths/json5" : ">=2.2.2"
   }
 }
