--- a/package.json
+++ b/package.json
@@ -128,7 +128,8 @@
     "qs": ">=6.5.3",
     "json5": ">=2.2.2",
     "minimist": ">=1.2.6",
-    "semver": ">=7.5.2"
+    "semver": ">=7.5.2",
+    "follow-redirects": ">=1.15.4"
   },
   "packageManager": "yarn@3.6.4"
 }
