--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/http-proxy-middleware": "^1.0.0",
     "@types/i18next": "^13.0.0",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.6",
+    "@types/node": "^18.15.11",
     "@types/nunjucks": "^3.2.1",
     "@types/require-directory": "^2.1.2",
     "@types/serve-favicon": "^2.5.3",
@@ -81,7 +81,7 @@
     "@types/supertest": "^2.0.12",
     "@types/webpack-dev-middleware": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.30.7",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.57.1",
     "@typescript-eslint/parser": "^5.30.7",
     "allure-commandline": "^2.21.0",
     "allure-playwright": "^2.1.0",
@@ -116,7 +116,7 @@
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.3.1",
     "tslint": "^6.1.3",
-    "webpack": "^5.75.0",
+    "webpack": "^5.76.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-middleware": "^5.3.3",
     "webpack-node-externals": "^3.0.0"
@@ -128,7 +128,9 @@
     "qs": ">=6.5.3",
     "json5": ">=2.2.2",
     "minimist": ">=1.2.6",
-    "semver": ">=7.5.2"
+    "semver": ">=7.5.2",
+    "follow-redirects": ">=1.15.4",
+    "word-wrap": ">=1.2.4"
   },
   "packageManager": "yarn@3.6.4"
 }
