--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
     "minimist": ">=1.2.6",
     "semver": ">=7.5.2",
     "follow-redirects": ">=1.15.4",
-    "word-wrap": ">=1.2.4"
+    "word-wrap": ">=1.2.4",
+    "axios>follow-redirects": ">=1.15.4"
   },
   "packageManager": "yarn@3.6.4"
 }
