--- a/package.json
+++ b/package.json
@@ -47,14 +47,14 @@
     "applicationinsights": "^2.3.3",
     "autobind-decorator": "^2.4.0",
     "awilix": "^7.0.3",
-    "axios": "1.6.5",
+    "axios": "1.6.7",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "express": "^4.18.1",
     "express-nunjucks": "^2.2.5",
     "glob-parent": "6.0.2",
-    "govuk-frontend": "4.5.0",
+    "govuk-frontend": "^4.8.0",
     "helmet": "^4.6.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^21.8.14",
@@ -89,7 +89,7 @@
     "babel-loader": "^9.1.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "chokidar": "^3.5.3",
+    "chokidar": "^3.6.0",
     "codeceptjs": "^3.5.6",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
@@ -130,7 +130,10 @@
     "minimist": ">=1.2.6",
     "semver": ">=7.5.2",
     "follow-redirects": ">=1.15.4",
-    "word-wrap": ">=1.2.4"
+    "word-wrap": ">=1.2.4",
+    "axios>follow-redirects": ">=1.15.4",
+    "http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4",
+    "@types/http-proxy-middleware>http-proxy-middleware>http-proxy>follow-redirects": ">=1.15.4"
   },
   "packageManager": "yarn@3.6.4"
 }
